# snekdown

./: .gitignore  Cargo.toml  README.md  perf.data  rust-toolchain
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-release.yml  build.yml
src/: elements.rs  error.rs  lib.rs  main.rs  parser.rs  tokens.rs
src/elements/: mod.rs  tokens.rs
src/format/: html.rs  mod.rs  style.rs
src/format/assets/: base.scss  dark-magic.scss  dark-ocean.scss  dark-solarized.scss  light-github.scss  light-ocean.scss  light-solarized.scss  style.css
src/format/chromium_pdf/: mod.rs  result.rs
src/format/chromium_pdf/assets/: default-footer-template.html
src/format/epub/: epub_writer.rs  mod.rs  to_epub.rs
src/format/epub/assets/: style.css
src/format/html/: html_writer.rs  mod.rs  to_html.rs
src/format/html/assets/: style.css
src/lexer/: mod.rs  token_parsers.rs  tokens.rs
src/parser/: block.rs  charstate.rs  inline.rs  line.rs  mod.rs
src/parsing/: bibliography.rs  charstate.rs  elements.rs  inline.rs  mod.rs  parser.rs  placeholders.rs  subtext.rs  templates.rs  tokens.rs  utils.rs
src/parsing/configuration/: config.rs  keys.rs  mod.rs
src/references/: bibliography.rs  glossary.rs  mod.rs  placeholders.rs  templates.rs
src/references/configuration/: config.rs  default.toml  keys.rs  mod.rs
src/settings/: feature_settings.rs  format_settings.rs  image_settings.rs  import_settings.rs  metadata_settings.rs  mod.rs  pdf_settings.rs  style_settings.rs
src/tests/: lexer_tests.rs  mod.rs
src/utils/: caching.rs  downloads.rs  image_converting.rs  macros.rs  mod.rs  parsing.rs
tests/: parsing_tests.rs
