[package]
name = "snekdown"
version = "0.30.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "A parser for the custom snekdown markdown syntax"
repository = "https://github.com/Trivernis/snekdown"

[lib]
name = "snekdown"
crate-type = ["lib"]

[[bin]]
name = "snekdown"
path = "src/main.rs"

[features]

pdf = ["headless_chrome", "failure"]

[dependencies]
charred = "0.3.3"
asciimath-rs = "0.5.7"
bibliographix = "0.5.0"
crossbeam-utils = "0.7.2"
structopt = "0.3.14"
minify = "1.1.1"
htmlescape = "0.3.1"
syntect = "4.2.0"
chrono = "0.4.11"
regex = "1.3.9"
lazy_static = "1.4.0"
colored = "1.9.3"
gh-emoji = "1.0.3"
notify = "4.0.12"
toml = "0.5.6"
serde ="1.0.111"
serde_derive = "1.0.111"
reqwest = {version = "0.10", features=["blocking"]}
mime_guess = "2.0.3"
mime = "0.3.16"
base64 = "0.12.3"
rayon = "1.3.1"
maplit = "1.0.2"
log = "0.4.11"
env_logger = "0.7.1"
indicatif = "0.15.0"
platform-dirs = "0.2.0"
headless_chrome = {version = "0.9.0", optional = true}
failure = {version = "0.1.8", optional = true}