[package]
name = "snekdown-v2"
version = "0.1.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
charred = "2.2.0"
thiserror = "1.0.24"

[dependencies.tokio]
version = "1.5.0"
features = ["rt-multi-thread", "macros", "fs"]